# frcmed-poster

./: .gitignore  CLAUDE.md  README.md  frconor-prd.md  pyproject.toml
.claude/commands/: gp.md
config/: art_styles.json  comic_styles.json  settings.json
frconor_post/: __init__.py  cli.py  comic_cli.py  comic_generator.py  composer.py  concept_generator.py  config.py  fetcher.py  image_cli.py  image_generator.py  output.py  quote_generator.py  shortener.py  utils.py
prompts/: comic_generation.md  concept_generation.md  image_generation.md  quote_generation.md
